--- a/sqlite-gui.cbp
+++ b/sqlite-gui.cbp
@@ -13,12 +13,16 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-std=c++11" />
+					<Add option="-m32" />
 					<Add option="-g" />
 					<Add option="-U__STRICT_ANSI__" />
 					<Add option="-DUNICODE" />
 					<Add option="-D_UNICODE" />
 					<Add directory="include" />
 				</Compiler>
+				<Linker>
+					<Add option="-m32" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/sqlite-gui" prefix_auto="1" extension_auto="1" />
@@ -28,6 +32,7 @@
 				<Compiler>
 					<Add option="-Os" />
 					<Add option="-std=c++11" />
+					<Add option="-m32" />
 					<Add option="-U__STRICT_ANSI__" />
 					<Add option="-DUNICODE" />
 					<Add option="-D_UNICODE" />
@@ -35,17 +40,20 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="-m32" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-std=c++11" />
+			<Add option="-m32" />
 		</Compiler>
 		<Linker>
 			<Add option="-static-libstdc++" />
 			<Add option="-static-libgcc" />
 			<Add option="-static" />
+			<Add option="-m32" />
 			<Add library="gdi32" />
 			<Add library="user32" />
 			<Add library="kernel32" />
