--- a/src/resource.rc
+++ b/src/resource.rc
@@ -4,15 +4,15 @@
 #include "resource.h"
 
 1 VERSIONINFO
-FILEVERSION 1, 5, 1, 0
+FILEVERSION 1, 5, 2, 0
 FILEOS VOS_DOS_WINDOWS32
 FILETYPE VFT_APP {
 	BLOCK "StringFileInfo" {
 		BLOCK "040904E4" {
 			VALUE "FileDescription", "sqlite-gui\000"
-			VALUE "FileVersion", "1.5.1\000"
+			VALUE "FileVersion", "1.5.2\000"
 			VALUE "ProductName", "sqlite-gui\000"
-			VALUE "ProductVersion", "1.5.1\000"
+			VALUE "ProductVersion", "1.5.2\000"
 			VALUE "LegalCopyright", "Copyright \251 Little Brother 2020-2021\000"
 			VALUE "OriginalFilename", "sqlite-gui.exe\000"
 		}
@@ -146,8 +146,8 @@ BEGIN
 	COMBOBOX		IDC_DLG_FONT_SIZE, 165, 5, 30, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 
 	AUTOCHECKBOX	"Autoload extensions", IDC_DLG_AUTOLOAD, 5, 20, 180, 16, BS_NOTIFY
-	AUTOCHECKBOX	"Open last database at startup", IDC_DLG_RESTORE_DB, 5, 35, 180, 16, BS_NOTIFY
-	AUTOCHECKBOX	"Restore editor tabs at startup", IDC_DLG_RESTORE_EDITOR, 5, 50, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX	"Open last database on startup", IDC_DLG_RESTORE_DB, 5, 35, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX	"Restore editor tabs on startup", IDC_DLG_RESTORE_EDITOR, 5, 50, 180, 16, BS_NOTIFY
 	AUTOCHECKBOX	"Editor highlighter", IDC_DLG_USE_HIGHLIGHT, 5, 65, 180, 16, BS_NOTIFY
 
 	AUTOCHECKBOX	"Ask when deleting a row", IDC_DLG_ASK_DELETE, 5, 80, 180, 16, BS_NOTIFY
@@ -441,6 +441,7 @@ BEGIN
 	POPUP "Database"
 	BEGIN
 		MENUITEM "Open", IDM_OPEN
+		MENUITEM "Save as", IDM_SAVE_AS, GRAYED
 		MENUITEM "Close", IDM_CLOSE, GRAYED
 		MENUITEM SEPARATOR
 		MENUITEM "No recents", 0, GRAYED
@@ -720,6 +721,7 @@ BEGIN
 
 	"N", IDM_OPEN_EDITOR, CONTROL, VIRTKEY
 	VK_ESCAPE, IDM_CLOSE_EDITOR, CONTROL ALT, VIRTKEY
+	VK_BACK, IDM_CLOSE_EDITOR, CONTROL ALT, VIRTKEY
 	VK_LEFT, IDM_PREV_EDITOR, CONTROL ALT, VIRTKEY
 	VK_RIGHT, IDM_NEXT_EDITOR, CONTROL ALT, VIRTKEY
 END
@@ -745,7 +747,7 @@ BEGIN
 		"Ctrl + O - Open database\n" \
 		"Ctrl + Q - Close database\n" \
 		"Ctrl + N - New editor\n" \
-		"Ctrl + Alt + Escape - Close the current editor\n" \
+		"Ctrl + Alt + Escape/Backspace - Close the current editor\n" \
 		"Ctrl + Alt + Right/Left - Toggle the editor's tab or switch between data windows\n\n" \
 		"Navigation tree\n" \
 		"Ctrl + C - copy the text of the selected item to the clipboard\n" \
