--- a/src/resource.rc
+++ b/src/resource.rc
@@ -4,15 +4,15 @@
 #include "resource.h"
 
 1 VERSIONINFO
-FILEVERSION 1, 5, 2, 0
+FILEVERSION 1, 5, 3, 0
 FILEOS VOS_DOS_WINDOWS32
 FILETYPE VFT_APP {
 	BLOCK "StringFileInfo" {
 		BLOCK "040904E4" {
 			VALUE "FileDescription", "sqlite-gui\000"
-			VALUE "FileVersion", "1.5.2\000"
+			VALUE "FileVersion", "1.5.3\000"
 			VALUE "ProductName", "sqlite-gui\000"
-			VALUE "ProductVersion", "1.5.2\000"
+			VALUE "ProductVersion", "1.5.3\000"
 			VALUE "LegalCopyright", "Copyright \251 Little Brother 2020-2021\000"
 			VALUE "OriginalFilename", "sqlite-gui.exe\000"
 		}
@@ -419,11 +419,13 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_CHART DIALOGEX 40, 30, 400, 260
+IDD_CHART DIALOGEX 40, 30, 450, 260
 	STYLE WS_OVERLAPPEDWINDOW | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
-	CAPTION "Chart"
+	CAPTION ""
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
+	LTEXT "", IDC_DLG_CHART, 0, 0, 300, 260, SS_NOTIFY | WS_TABSTOP
+	LTEXT "", IDC_DLG_CHART_OPTIONS, 320, 0, 150, 260, SS_NOTIFY
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -615,12 +617,14 @@ IDC_MENU_EDITOR MENU DISCARDABLE
 BEGIN
 	POPUP ""
 	BEGIN
-		MENUITEM "Cut", IDM_EDITOR_CUT
-		MENUITEM "Copy", IDM_EDITOR_COPY
-		MENUITEM "Paste", IDM_EDITOR_PASTE
-		MENUITEM "Delete", IDM_EDITOR_DELETE
+		MENUITEM "Comment\tCtrl+/", IDM_EDITOR_COMMENT
 		MENUITEM SEPARATOR
-		MENUITEM "Find", IDM_EDITOR_FIND
+		MENUITEM "Cut\tCtrl+X", IDM_EDITOR_CUT
+		MENUITEM "Copy\tCtrl+C", IDM_EDITOR_COPY
+		MENUITEM "Paste\tCtrl+V", IDM_EDITOR_PASTE
+		MENUITEM "Delete\tDel", IDM_EDITOR_DELETE
+		MENUITEM SEPARATOR
+		MENUITEM "Find\tCtrl+F", IDM_EDITOR_FIND
 	END
 END
 
@@ -756,10 +760,12 @@ BEGIN
 		"F8/Alt + Enter - Show query plan\n" \
 		"F9/Ctrl + Enter - Execute query\n" \
 		"F12/Ctrl + Alt + Enter - Execute as batch (synchronous is off, joint output)\n" \
-		"Tab - Add indents in Editor\n" \
-		"Tab + Shift - Remove indents in Editor\n" \
+		"Tab - Add indents\n" \
+		"Tab + Shift - Remove indents\n" \
+		"Shift + F3 - Toggle text case\n" \
 		"Ctrl + W - Toggle word wrap mode\n" \
-		"Ctrl + ? - Get the table columns desc\n" \
+		"Ctrl + / - Comment/uncomment block\n" \
+		"Ctrl + . - Get the table columns desc\n" \
 		"Ctrl + Click - Edit the table data\n\n" \
 		"Console editor\n" \
 		"Ctrl + Up - Previous query\n" \
@@ -788,7 +794,6 @@ BEGIN
 		"   tabs you should use SHARED-schema instead TEMP. Check Wiki for details.\n\n" \
 		"* During a transaction the special indicator is displayed inside the status bar.\n\n" \
 		"* In the batch mode all queries are executed in a one implicit transaction.\n\n" \
-		"* An query result can be viewed as a chart. The chart type is defined by\n   first column values: numbers or dates (YYYY-MM-DD) - plot, texts - bars.\n\n" \
 		"* Edit data dialog \n"
 		"   The dialog uses auto-transaction. So all changes are applied immediately.\n" \
 		"   The dialog doesn't block the main window, so you can open multiply tables \n" \
@@ -854,9 +859,11 @@ BEGIN
 		"Check the Wiki for troubleshooting."
 
 	IDS_CLI_HELP "Terminal help\n" \
-		".help - Show help\n"	\
+		".help - Show help\n" \
 		".clear - Clear terminal\n"	\
-		".last N - Load last N results"	\
+		".last N - Load last N results\n" \
+		".get <name> - Get prefs value\n" \
+		".set <name> <value> - Set prefs value" \
 
 	IDS_TOOLTIP_OPEN "Open database"
 	IDS_TOOLTIP_CLOSE "Close database"
