--- a/src/resource.rc
+++ b/src/resource.rc
@@ -4,15 +4,15 @@
 #include "resource.h"
 
 1 VERSIONINFO
-FILEVERSION 1, 5, 3, 0
+FILEVERSION 1, 5, 4, 0
 FILEOS VOS_DOS_WINDOWS32
 FILETYPE VFT_APP {
 	BLOCK "StringFileInfo" {
 		BLOCK "040904E4" {
 			VALUE "FileDescription", "sqlite-gui\000"
-			VALUE "FileVersion", "1.5.3\000"
+			VALUE "FileVersion", "1.5.4\000"
 			VALUE "ProductName", "sqlite-gui\000"
-			VALUE "ProductVersion", "1.5.3\000"
+			VALUE "ProductVersion", "1.5.4\000"
 			VALUE "LegalCopyright", "Copyright \251 Little Brother 2020-2021\000"
 			VALUE "OriginalFilename", "sqlite-gui.exe\000"
 		}
@@ -132,11 +132,11 @@ IDD_QUERYLIST DIALOGEX 50, 50, 500, 300
 	FONT 10, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	EDITTEXT IDC_DLG_QUERYFILTER, 0, 0, 300, 10, WS_BORDER | WS_TABSTOP, 0
-	CONTROL "", IDC_DLG_QUERYLIST, WC_LISTVIEW, WS_VSCROLL | WS_TABSTOP | LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_NOSORTHEADER, 0, 10, 400, 80, WS_EX_STATICEDGE
+	CONTROL "", IDC_DLG_QUERYLIST, WC_LISTVIEW, WS_VSCROLL | WS_TABSTOP | LVS_REPORT | LVS_SHOWSELALWAYS | LVS_NOSORTHEADER, 0, 10, 400, 80, WS_EX_STATICEDGE
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_SETTINGS DIALOGEX 50, 50, 200, 315
+IDD_SETTINGS DIALOGEX 50, 50, 200, 330
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME | WS_CLIPCHILDREN
 	CAPTION "Settings"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -155,34 +155,35 @@ BEGIN
 
 	AUTOCHECKBOX	"Unsafe renaming (pragma legacy_alter_table = 1)", IDC_DLG_USE_LEGACY, 5, 80 + 30, 180, 16, BS_NOTIFY
 	AUTOCHECKBOX	"Turn off disk synchronization for batch operations", IDC_DLG_SYNC_OFF, 5, 95 + 30, 180, 16, BS_NOTIFY
-	AUTOCHECKBOX	"App exit by escape", IDC_DLG_EXIT_BY_ESCAPE, 5, 110 + 30, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX	"Retain encrypted database passphrase in memory", IDC_DLG_RETAIN_PASSPHRASE, 5, 110 + 30, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX	"App exit by escape", IDC_DLG_EXIT_BY_ESCAPE, 5, 110 + 30 + 15, 180, 16, BS_NOTIFY
 
-	LTEXT		   "Editor indent", IDC_DLG_LABEL, 5, 149 - 20 + 30, 50, 14, SS_LEFT
-	COMBOBOX		IDC_DLG_INDENT, 55, 146 - 20 + 30, 65, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+	LTEXT		   "Editor indent", IDC_DLG_LABEL, 5, 149 - 20 + 30 + 15, 50, 14, SS_LEFT
+	COMBOBOX		IDC_DLG_INDENT, 55, 146 - 20 + 30 + 15, 65, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 
-	LTEXT		   "Max rows in result output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 164 - 20 + 30, 150, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_ROW_LIMIT, 160, 162 - 20 + 30, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	LTEXT		   "Max rows in result output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 164 - 20 + 30 + 15, 150, 14, SS_LEFT
+	EDITTEXT		IDC_DLG_ROW_LIMIT, 160, 162 - 20 + 30 + 15, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "Max rows in the terminal output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 179 - 20 + 30, 155, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_CLI_ROW_LIMIT, 160, 177 - 20 + 30, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	LTEXT		   "Max rows in the terminal output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 179 - 20 + 30 + 15, 155, 14, SS_LEFT
+	EDITTEXT		IDC_DLG_CLI_ROW_LIMIT, 160, 177 - 20 + 30 + 15, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "Beep if the query took longer than N ms", IDC_DLG_LABEL, 5, 179 + 15 - 20 + 30, 150, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_BEEP_ON_QUERY_END, 160, 177 + 15 - 20 + 30, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	LTEXT		   "Beep if the query took longer than N ms", IDC_DLG_LABEL, 5, 179 + 15 - 20 + 30 + 15, 150, 14, SS_LEFT
+	EDITTEXT		IDC_DLG_BEEP_ON_QUERY_END, 160, 177 + 15 - 20 + 30 + 15, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "Grid colors", IDC_DLG_LABEL, 5, 190 + 30 + 2, 35, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_GRID_COLOR_EDIT, 45 - 2, 190 + 30, 29, 12, ES_CENTER | NOT WS_VISIBLE | WS_CLIPSIBLINGS
+	LTEXT		   "Grid colors", IDC_DLG_LABEL, 5, 190 + 30 + 2 + 15, 35, 14, SS_LEFT
+	EDITTEXT		IDC_DLG_GRID_COLOR_EDIT, 45 - 2, 190 + 30 + 15, 29, 12, ES_CENTER | NOT WS_VISIBLE | WS_CLIPSIBLINGS
 
-	LTEXT		   "TEXT", IDC_DLG_GRID_COLOR, 45 - 2, 190 + 30, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY
-	LTEXT		   "NULL", IDC_DLG_GRID_COLOR + 1, 45 + 30*1 - 2, 190 + 30, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
-	LTEXT		   "BLOB", IDC_DLG_GRID_COLOR + 2, 45 + 30*2 - 2, 190 + 30, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
-	LTEXT		   "INT", IDC_DLG_GRID_COLOR + 3, 45 + 30*3 - 2, 190 + 30, 29, 12, SS_CENTER  | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
-	LTEXT		   "REAL", IDC_DLG_GRID_COLOR + 4, 45 + 30*4 - 2, 190 + 30, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "TEXT", IDC_DLG_GRID_COLOR, 45 - 2, 190 + 30 + 15, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY
+	LTEXT		   "NULL", IDC_DLG_GRID_COLOR + 1, 45 + 30*1 - 2, 190 + 30 + 15, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "BLOB", IDC_DLG_GRID_COLOR + 2, 45 + 30*2 - 2, 190 + 30 + 15, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "INT", IDC_DLG_GRID_COLOR + 3, 45 + 30*3 - 2, 190 + 30 + 15, 29, 12, SS_CENTER  | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "REAL", IDC_DLG_GRID_COLOR + 4, 45 + 30*4 - 2, 190 + 30 + 15, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
 
-	LTEXT		   "Execute on a database connection", IDC_DLG_LABEL, 5, 190 + 30 + 20, 150, 10, SS_LEFT
-	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 230 + 20, 190, 40, 0
+	LTEXT		   "Execute on a database connection", IDC_DLG_LABEL, 5, 190 + 30 + 20 + 15, 150, 10, SS_LEFT
+	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 230 + 20 + 15, 190, 40, 0
 
-	PUSHBUTTON "OK", IDC_DLG_OK, 70, 276 + 20, 60, 14, WS_TABSTOP
-	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 135, 276 + 20, 60, 14, WS_TABSTOP
+	PUSHBUTTON "OK", IDC_DLG_OK, 70, 276 + 20 + 15, 60, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 135, 276 + 20 + 15, 60, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -424,7 +425,7 @@ IDD_CHART DIALOGEX 40, 30, 450, 260
 	CAPTION ""
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	LTEXT "", IDC_DLG_CHART, 0, 0, 300, 260, SS_NOTIFY | WS_TABSTOP
+	LTEXT "", IDC_DLG_CHART, 0, 0, 300, 260, SS_NOTIFY | WS_CLIPCHILDREN
 	LTEXT "", IDC_DLG_CHART_OPTIONS, 320, 0, 150, 260, SS_NOTIFY
 END
 
