--- a/src/resource.rc
+++ b/src/resource.rc
@@ -4,15 +4,15 @@
 #include "resource.h"
 
 1 VERSIONINFO
-FILEVERSION 1, 5, 5, 0
+FILEVERSION GUI_VERSION2
 FILEOS VOS_DOS_WINDOWS32
 FILETYPE VFT_APP {
 	BLOCK "StringFileInfo" {
 		BLOCK "040904E4" {
 			VALUE "FileDescription", "sqlite-gui\000"
-			VALUE "FileVersion", "1.5.5\000"
+			VALUE "FileVersion", GUI_VERSION
 			VALUE "ProductName", "sqlite-gui\000"
-			VALUE "ProductVersion", "1.5.5\000"
+			VALUE "ProductVersion", GUI_VERSION
 			VALUE "LegalCopyright", "Copyright \251 Little Brother 2020-2021\000"
 			VALUE "OriginalFilename", "sqlite-gui.exe\000"
 		}
@@ -153,10 +153,10 @@ BEGIN
 	AUTOCHECKBOX	"Ask when deleting a row", IDC_DLG_ASK_DELETE, 5, 80, 180, 16, BS_NOTIFY
 	AUTOCHECKBOX	"Word wrap a text in an editor by default", IDC_DLG_WORD_WRAP, 5, 95, 180, 16, BS_NOTIFY
 
-	AUTOCHECKBOX	"Unsafe renaming (pragma legacy_alter_table = 1)", IDC_DLG_USE_LEGACY, 5, 80 + 30, 180, 16, BS_NOTIFY
-	AUTOCHECKBOX	"Turn off disk synchronization for batch operations", IDC_DLG_SYNC_OFF, 5, 95 + 30, 180, 16, BS_NOTIFY
-	AUTOCHECKBOX	"Retain encrypted database passphrase in memory", IDC_DLG_RETAIN_PASSPHRASE, 5, 110 + 30, 180, 16, BS_NOTIFY
-	AUTOCHECKBOX	"App exit by escape", IDC_DLG_EXIT_BY_ESCAPE, 5, 110 + 30 + 15, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX	"Turn off disk synchronization for batch operations", IDC_DLG_SYNC_OFF, 5, 95 + 15, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX	"Retain encrypted database passphrase in memory", IDC_DLG_RETAIN_PASSPHRASE, 5, 110 + 15, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX	"Check for updates automatically", IDC_DLG_CHECK_UPDATES, 5, 110 + 30, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX	"App exit by escape", IDC_DLG_EXIT_BY_ESCAPE, 5, 110 + 45, 180, 16, BS_NOTIFY
 
 	LTEXT		   "Editor indent", IDC_DLG_LABEL, 5, 149 - 20 + 30 + 15, 50, 14, SS_LEFT
 	COMBOBOX		IDC_DLG_INDENT, 55, 146 - 20 + 30 + 15, 65, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
@@ -789,6 +789,7 @@ BEGIN
 		"Ctrl + Click - View a cell value\n" \
 		"Ctrl + Tab - Toggle to a next result\n" \
 		"Ctrl + 1, Ctrl + 2, ... - Sort by column 1, 2, ... \n" \
+		"Ctrl + Shift + C - Copy selected rows to clipboard with a header\n" \
 		"Alt + Click - Show data if the column references to another table by FK key\n\n" \
 		"Data editor\n" \
 		"F2 - Edit cell value without clearing\n" \
