--- a/src/resource.rc
+++ b/src/resource.rc
@@ -44,7 +44,7 @@ BEGIN
 
 	AUTOCHECKBOX "Clear values after row creation", IDC_DLG_CLEAR_VALUES, 5, 5, 120, 16, BS_NOTIFY | NOT WS_VISIBLE
 	PUSHBUTTON "OK", IDC_DLG_OK, 0, 0, 60, 14, WS_TABSTOP
-	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 0, 0, 60, 14, WS_TABSTOP
+	PUSHBUTTON "Close", IDC_DLG_CANCEL, 0, 0, 60, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -237,15 +237,40 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_FIND DIALOGEX 300, 100, 180, 45
+IDD_FIND DIALOGEX 300, 100, 240, 55
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
-	CAPTION "Find"
+	CAPTION "Find or replace"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	EDITTEXT IDC_DLG_FIND, 5, 5, 170, 12, WS_BORDER | WS_TABSTOP | ES_LEFT
+	LTEXT "Find", IDC_DLG_LABEL, 5, 7, 45, 14, SS_RIGHT
+	EDITTEXT IDC_DLG_FIND_STRING, 60, 5, 120, 12, WS_BORDER | WS_TABSTOP | ES_LEFT
+	LTEXT "Replace with", IDC_DLG_LABEL, 5, 22, 45, 14, SS_RIGHT
+	EDITTEXT IDC_DLG_REPLACE_STRING, 60, 20, 120, 12, WS_BORDER | WS_TABSTOP | ES_LEFT
+	AUTOCHECKBOX "Case sensitive", IDC_DLG_CASE_SENSITIVE, 60, 35, 100, 16, BS_NOTIFY
+	PUSHBUTTON "Find", IDC_DLG_FIND, 185, 5, 50, 14, WS_TABSTOP
+	PUSHBUTTON "Replace", IDC_DLG_REPLACE, 185, 21, 50, 14, WS_TABSTOP
+	PUSHBUTTON "Replace all", IDC_DLG_REPLACE_ALL, 185, 37, 50, 14, WS_TABSTOP
+END
+
+LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_TABLENAME DIALOGEX 300, 100, 180, 45
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
+	CAPTION "Table name"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	EDITTEXT IDC_DLG_TABLENAME, 5, 5, 170, 12, WS_BORDER | WS_TABSTOP | ES_LEFT
 
 	PUSHBUTTON "OK", IDC_DLG_OK, 70, 25, 50, 14, WS_TABSTOP
 	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 125, 25, 50, 14, WS_TABSTOP
+END
+
+LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_RESULTS_COMPARISON DIALOGEX 100, 50, 400, 300
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_SIZEBOX | DS_MODALFRAME
+	CAPTION "Results comparison"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	CONTROL "", IDC_DLG_COMPARED, WC_LISTVIEW, WS_VSCROLL | WS_TABSTOP | LVS_REPORT | LVS_SINGLESEL, 0, 0, 400, 300, 0
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -652,7 +677,13 @@ BEGIN
 		MENUITEM "Copy cell to clipboard", IDM_RESULT_COPY_CELL
 		MENUITEM "Copy row to clipboard", IDM_RESULT_COPY_ROW
 		MENUITEM SEPARATOR
+		MENUITEM "Save as table", IDM_RESULT_AS_TABLE
 		MENUITEM "Export to csv", IDM_RESULT_EXPORT
+		MENUITEM SEPARATOR
+		POPUP "Compare with"
+		BEGIN
+			MENUITEM "To mark as submenu", IDM_RESULT_COMPARE
+		END
 	END
 END
 
@@ -667,6 +698,18 @@ BEGIN
 		MENUITEM "Delete\tDel", IDM_ROW_DELETE
 		MENUITEM "Duplicate", IDM_ROW_DUPLICATE
 		MENUITEM SEPARATOR
+		MENUITEM "Copy cell to clipboard", IDM_RESULT_COPY_CELL
+		MENUITEM "Copy row to clipboard", IDM_RESULT_COPY_ROW
+		MENUITEM SEPARATOR
+		MENUITEM "Export to csv", IDM_RESULT_EXPORT
+	END
+END
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDC_MENU_VIEW_DATA MENU
+BEGIN
+	POPUP "View data"
+	BEGIN
 		MENUITEM "Copy cell to clipboard", IDM_RESULT_COPY_CELL
 		MENUITEM "Copy row to clipboard", IDM_RESULT_COPY_ROW
 		MENUITEM SEPARATOR
@@ -742,6 +785,8 @@ BEGIN
 	VK_F12, IDM_EXECUTE_BATCH, VIRTKEY
 	VK_RETURN, IDM_PLAN, ALT, VIRTKEY
 	VK_F8, IDM_PLAN, VIRTKEY
+	VK_F8, IDM_PLAN_CURRENT, ALT, VIRTKEY
+	VK_F9, IDM_EXECUTE_CURRENT, ALT, VIRTKEY
 	"S", IDM_SAVE, CONTROL, VIRTKEY
 	"H", IDM_HISTORY, CONTROL, VIRTKEY
 	"G", IDM_GISTS, CONTROL, VIRTKEY
@@ -778,13 +823,15 @@ BEGIN
 		"Ctrl + Q - Close database\n" \
 		"Ctrl + N - New editor\n" \
 		"Ctrl + Alt + Escape/Backspace - Close the current editor\n" \
-		"Ctrl + Alt + Right/Left - Toggle the editor's tab or switch between data windows\n\n" \
+		"Ctrl + Alt + Left/Right - Toggle the editor's tab or switch between data windows\n\n" \
 		"Navigation tree\n" \
 		"Ctrl + C - copy the text of the selected item to the clipboard\n" \
 		"Ctrl + Shift + C - copy the DDL of the selected item to the clipboard\n\n" \
 		"Editor\n" \
 		"F8/Alt + Enter - Show query plan\n" \
+		"Alt + F8 - Show plan for only current query\n" \
 		"F9/Ctrl + Enter - Execute query\n" \
+		"Alt + F9 - Execute only current query\n" \
 		"F12/Ctrl + Alt + Enter - Execute as batch (synchronous is off, joint output)\n" \
 		"Tab - Add indents\n" \
 		"Tab + Shift - Remove indents\n" \
@@ -856,7 +903,7 @@ BEGIN
 		"Regexp\n"\
 		"Implements regexp(regexp, stringToMatch) function and ""B regexp A"" operator. This is a non-POSIX regexp.\n\n" \
 		"Ora\n"\
-		"Adds rownum(start), concat(str1, str2, ...), decode(expr, key1, value1, key2, value2, ..., defValue), strpart(str, delims, partno), conv(num, base_from, base_to), tosize(nBytes), crc32(str), md5(str), base64_encode(str) and base64_decode(str) functions.\n\n" \
+		"Adds rownum(start), concat(str1, str2, ...), decode(expr, key1, value1, key2, value2, ..., defValue), strpart(str, delims, partno), conv(num, base_from, base_to), tosize(nBytes), levenshtein(str1, str2), crc32(str), md5(str), base64_encode(str) and base64_decode(str) functions.\n\n" \
 		"ODBC\n"\
 		"Adds odbc_read(connectionString, query, target), odbc_write(query, connectionString, target), odbc_query(connectionString, query) and odbc_dsn() functions.\n\n" \
 		"Exec\n"\
