--- a/src/resource.rc
+++ b/src/resource.rc
@@ -58,7 +58,8 @@ BEGIN
 	PUSHBUTTON ">>",IDC_DLG_MORE, 200, 5, 23, 14, WS_TABSTOP
 	AUTOCHECKBOX "Without rowid", IDC_DLG_ISWITHOUT_ROWID, 290, 5, 100, 16, BS_NOTIFY | NOT WS_VISIBLE
 
-	CONTROL "", IDC_DLG_COLUMNS, WC_LISTVIEW, WS_TABSTOP | LVS_AUTOARRANGE | LVS_REPORT | LVS_NOSORTHEADER | LVS_SHOWSELALWAYS | LVS_SINGLESEL, 5,25, 220, 120, WS_EX_STATICEDGE
+	LTEXT "Table columns", IDC_DLG_LABEL, 5, 25, 100, 14, SS_LEFT
+	CONTROL "", IDC_DLG_COLUMNS, WC_LISTVIEW, WS_TABSTOP | LVS_AUTOARRANGE | LVS_REPORT | LVS_NOSORTHEADER | LVS_SHOWSELALWAYS | LVS_SINGLESEL, 5, 35, 220, 110, WS_EX_STATICEDGE
 
 	PUSHBUTTON "Add", IDC_DLG_ROW_ADD, 5, 150, 30, 14, WS_TABSTOP
 	PUSHBUTTON "Delete", IDC_DLG_ROW_DEL, 40, 150, 30, 14, WS_TABSTOP
@@ -141,20 +142,21 @@ IDD_SETTINGS DIALOGEX 50, 50, 200, 330
 	CAPTION "Settings"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	LTEXT		   "Font", IDC_DLG_LABEL, 5, 7, 30, 14, SS_LEFT
+	LTEXT		    "Font", IDC_DLG_LABEL, 5, 7, 30, 14, SS_LEFT
 	COMBOBOX		IDC_DLG_FONT_FAMILY, 35, 5, 125, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWN | CBS_HASSTRINGS
 	COMBOBOX		IDC_DLG_FONT_SIZE, 165, 5, 30, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 
 	AUTOCHECKBOX	"Autoload extensions", IDC_DLG_AUTOLOAD, 5, 20, 180, 16, BS_NOTIFY
 	AUTOCHECKBOX	"Open last database on startup", IDC_DLG_RESTORE_DB, 5, 35, 180, 16, BS_NOTIFY
 	AUTOCHECKBOX	"Restore editor tabs on startup", IDC_DLG_RESTORE_EDITOR, 5, 50, 180, 16, BS_NOTIFY
-	AUTOCHECKBOX	"Editor highlighter", IDC_DLG_USE_HIGHLIGHT, 5, 65, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX	"Ask when deleting a row", IDC_DLG_ASK_DELETE, 5, 80 - 15, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX	"Word wrap a text in an editor by default", IDC_DLG_WORD_WRAP, 5, 95 - 15, 180, 16, BS_NOTIFY
 
-	AUTOCHECKBOX	"Ask when deleting a row", IDC_DLG_ASK_DELETE, 5, 80, 180, 16, BS_NOTIFY
-	AUTOCHECKBOX	"Word wrap a text in an editor by default", IDC_DLG_WORD_WRAP, 5, 95, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX	"Turn off disk synchronization for batch operations", IDC_DLG_SYNC_OFF, 5, 95, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX	"Retain encrypted database passphrase in memory", IDC_DLG_RETAIN_PASSPHRASE, 5, 110, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX	"Enable built-in REST web server on port", IDC_DLG_HTTP_SERVER, 5, 125, 150, 16, BS_NOTIFY
+	EDITTEXT		IDC_DLG_HTTP_SERVER_PORT, 160, 127, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	AUTOCHECKBOX	"Turn off disk synchronization for batch operations", IDC_DLG_SYNC_OFF, 5, 95 + 15, 180, 16, BS_NOTIFY
-	AUTOCHECKBOX	"Retain encrypted database passphrase in memory", IDC_DLG_RETAIN_PASSPHRASE, 5, 110 + 15, 180, 16, BS_NOTIFY
 	AUTOCHECKBOX	"Check for updates automatically", IDC_DLG_CHECK_UPDATES, 5, 110 + 30, 180, 16, BS_NOTIFY
 	AUTOCHECKBOX	"App exit by escape", IDC_DLG_EXIT_BY_ESCAPE, 5, 110 + 45, 180, 16, BS_NOTIFY
 
@@ -243,9 +245,9 @@ IDD_FIND DIALOGEX 300, 100, 240, 55
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	LTEXT "Find", IDC_DLG_LABEL, 5, 7, 45, 14, SS_RIGHT
-	EDITTEXT IDC_DLG_FIND_STRING, 60, 5, 120, 12, WS_BORDER | WS_TABSTOP | ES_LEFT
+	EDITTEXT IDC_DLG_FIND_STRING, 60, 5, 120, 12, ES_LEFT
 	LTEXT "Replace with", IDC_DLG_LABEL, 5, 22, 45, 14, SS_RIGHT
-	EDITTEXT IDC_DLG_REPLACE_STRING, 60, 20, 120, 12, WS_BORDER | WS_TABSTOP | ES_LEFT
+	EDITTEXT IDC_DLG_REPLACE_STRING, 60, 20, 120, 12, ES_LEFT
 	AUTOCHECKBOX "Case sensitive", IDC_DLG_CASE_SENSITIVE, 60, 35, 100, 16, BS_NOTIFY
 	PUSHBUTTON "Find", IDC_DLG_FIND, 185, 5, 50, 14, WS_TABSTOP
 	PUSHBUTTON "Replace", IDC_DLG_REPLACE, 185, 21, 50, 14, WS_TABSTOP
@@ -255,7 +257,7 @@ END
 LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_TABLENAME DIALOGEX 300, 100, 180, 45
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
-	CAPTION "Table name"
+	CAPTION "Save to table"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	EDITTEXT IDC_DLG_TABLENAME, 5, 5, 170, 12, WS_BORDER | WS_TABSTOP | ES_LEFT
@@ -348,19 +350,15 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_TOOL_EXPORT_SQL DIALOGEX 50, 50, 174, 120
+IDD_TOOL_IMPORT_JSON DIALOGEX 300, 100, 180, 45
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
-	CAPTION "Export structure and data to SQL file"
+	CAPTION "Import JSON to table"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	CONTROL "", IDC_DLG_OBJECTLIST, WC_LISTVIEW, WS_TABSTOP | LVS_AUTOARRANGE | LVS_REPORT | LVS_NOSORTHEADER | LVS_SHOWSELALWAYS, 5, 5, 165, 70, WS_EX_STATICEDGE
+	EDITTEXT IDC_DLG_TABLENAME, 5, 5, 170, 12, WS_BORDER | WS_TABSTOP | ES_LEFT
 
-	AUTORADIOBUTTON "Structure and data", IDC_DLG_DATADDL, 5, 85, 80, 10, WS_TABSTOP
-	AUTORADIOBUTTON "Data", IDC_DLG_DATAONLY, 85, 85, 30, 10, WS_TABSTOP
-	AUTORADIOBUTTON "Structure", IDC_DLG_DDLONLY, 125, 85, 50, 10, WS_TABSTOP
-
-	PUSHBUTTON "OK", IDC_DLG_OK, 65, 102, 50, 14, 0
-	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 120, 102, 50, 14, 0
+	PUSHBUTTON "OK", IDC_DLG_OK, 70, 25, 50, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 125, 25, 50, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -380,6 +378,34 @@ BEGIN
 
 	PUSHBUTTON "OK", IDC_DLG_OK, 65, 82, 50, 14, 0
 	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 120, 82, 50, 14, 0
+END
+
+LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_TOOL_EXPORT_JSON DIALOGEX 50, 50, 174, 60
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
+	CAPTION "Export data of table/view to JSON file"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	COMBOBOX IDC_DLG_TABLENAME, 5, 5, 165, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_SORT
+
+	PUSHBUTTON "OK", IDC_DLG_OK, 65, 42, 50, 14, 0
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 120, 42, 50, 14, 0
+END
+
+LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_TOOL_EXPORT_SQL DIALOGEX 50, 50, 174, 120
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
+	CAPTION "Export structure and data to SQL file"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	CONTROL "", IDC_DLG_OBJECTLIST, WC_LISTVIEW, WS_TABSTOP | LVS_AUTOARRANGE | LVS_REPORT | LVS_NOSORTHEADER | LVS_SHOWSELALWAYS, 5, 5, 165, 70, WS_EX_STATICEDGE
+
+	AUTORADIOBUTTON "Structure and data", IDC_DLG_DATADDL, 5, 85, 80, 10, WS_TABSTOP
+	AUTORADIOBUTTON "Data", IDC_DLG_DATAONLY, 85, 85, 30, 10, WS_TABSTOP
+	AUTORADIOBUTTON "Structure", IDC_DLG_DDLONLY, 125, 85, 50, 10, WS_TABSTOP
+
+	PUSHBUTTON "OK", IDC_DLG_OK, 65, 102, 50, 14, 0
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 120, 102, 50, 14, 0
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -512,12 +538,20 @@ BEGIN
 		MENUITEM "Database comparison", IDM_COMPARE_DATABASE, GRAYED
 		MENUITEM "Database search", IDM_DATABASE_SEARCH, GRAYED
 		MENUITEM SEPARATOR
-		MENUITEM "Import SQL file", IDM_IMPORT_SQL, GRAYED
-		MENUITEM "Import CSV file", IDM_IMPORT_CSV, GRAYED
-		MENUITEM "Import via ODBC", IDM_IMPORT_ODBC, GRAYED
-		MENUITEM "Export to SQL file", IDM_EXPORT_SQL, GRAYED
-		MENUITEM "Export as CSV file", IDM_EXPORT_CSV, GRAYED
-		MENUITEM "Export via ODBC", IDM_EXPORT_ODBC, GRAYED
+		POPUP "Import", GRAYED
+		BEGIN
+			MENUITEM "SQL", IDM_IMPORT_SQL
+			MENUITEM "CSV", IDM_IMPORT_CSV
+			MENUITEM "JSON", IDM_IMPORT_JSON
+			MENUITEM "via ODBC", IDM_IMPORT_ODBC
+		END
+		POPUP "Export", GRAYED
+		BEGIN
+			MENUITEM "SQL", IDM_EXPORT_SQL
+			MENUITEM "CSV", IDM_EXPORT_CSV
+			MENUITEM "JSON", IDM_EXPORT_JSON
+			MENUITEM "via ODBC", IDM_EXPORT_ODBC
+		END
 		MENUITEM "Generate data", IDM_GENERATE_DATA, GRAYED
 		MENUITEM SEPARATOR
 		MENUITEM "Integrity check", IDM_CHECK_INTEGRITY, GRAYED
@@ -851,6 +885,7 @@ BEGIN
 		"Ctrl + Shift + C - Copy selected rows to clipboard with a header\n" \
 		"Alt + Click - Show data if the column references to another table by FK key\n\n" \
 		"Data editor\n" \
+		"Ctrl + Click - Edit a cell value\n" \
 		"F2 - Edit cell value without clearing\n" \
 		"Space - Edit cell value with clearing\n" \
 		"Ctrl + Space - Set cell value as one of column values\n"
@@ -885,6 +920,7 @@ BEGIN
 		"* You can define your own types in the data generator by adding rows to \n   table ""generators"" in ""prefs.sqlite"". The type is defined by ""type"" column.\n\n" \
 		"* To edit a single table/view run: sqlite-gui <db path> <table name>\n\n" \
 		"* Copy and Export result rows operations use the same settings as Tools >\n   Export as CSV file. Settings are updated when you export any table.\n\n" \
+		"* A beep when a database is opened indicates that REST API is available\n\n" \
 		"Cons\n" \
 		"* An empty string is set to NULL when data is edit\n" \
 		"* Data diagram isn't accurate with building references in views/triggers\n"
